test see if cards are fixed on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -70,7 +70,7 @@ body.home {
 .card-links {
   justify-content: center;
   font-size: 15px;
-  position: relative;
+  /* position: relative; */
 }
 
 .card:hover {
@@ -119,7 +119,7 @@ h3 {
   height: 100vh; /* Magic here */
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   /* overflow: scroll; */
 }
